--- a/environments/dev/foundations/vpc-subnets/Jenkinsfile
+++ b/environments/dev/foundations/vpc-subnets/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
     agent any
     tools {
-        terraform "terraform v1.3.2 "
+        terraform "terraform1.4.0"
     }
 
     stages {
