--- a/environments/dev/foundations/vpc-subnets/Jenkinsfile
+++ b/environments/dev/foundations/vpc-subnets/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline{
        PATH = "${PATH}:${getTerraformPath()}"
     }
     tools {
-        terraform "terraform1.4.0"
+        terraform "Terraform1.4.0"
     }
     stages{
         stage('Git Checkout'){
