--- a/environments/dev/foundations/vpc-subnets/Jenkinsfile
+++ b/environments/dev/foundations/vpc-subnets/Jenkinsfile
@@ -14,5 +14,10 @@ pipeline {
                 sh 'terraform init'
             }
         }
+        stage('Terraform Plan'){
+            steps {
+                sh 'terraform plan'
+            }
+        }
     }
 }
