--- a/environments/dev/foundations/vpc-subnets/Jenkinsfile
+++ b/environments/dev/foundations/vpc-subnets/Jenkinsfile
@@ -19,5 +19,10 @@ pipeline {
                 sh 'terraform plan'
             }
         }
+        stage ('Terraform Apply' {
+            steps {
+                sh 'terraform apply'
+            }
+        })
     }
 }
