--- a/environments/dev/foundations/vpc-subnets/Jenkinsfile
+++ b/environments/dev/foundations/vpc-subnets/Jenkinsfile
@@ -19,7 +19,7 @@ pipeline {
                 sh 'terraform plan'
             }
         }
-        stage ('Terraform Apply' {
+        stage('Terraform Apply')  {
             steps {
                 sh 'terraform apply'
             }
